--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@keyv/postgres": "^1.0.16",
+    "crypto-json": "^2.0.2",
     "discord.js": "^11.4.2",
     "keyv": "^3.1.0",
     "webpack": "^4.29.6",
