change config names

--- a/config.json.template
+++ b/config.json.template
@@ -9,7 +9,7 @@
     "MEMBER_JOIN_MESSAGE": "",
     "EMAIL_REGEX": ".*@.*",
     "SMPT_JS_LOGIN_TOKEN": "",
-    "CRYPTO_JSON.ALGORITHM": "aes256",
-    "CRYPTO_JSON.ENCODING": "hex",
-    "CRYPTO_JSON.MEMBER_ENCRYPT_KEY": ""
+    "CRYPTO_JSON_ALGORITHM": "aes256",
+    "CRYPTO_JSON_ENCODING": "hex",
+    "CRYPTO_JSON_MEMBER_ENCRYPT_KEY": ""
 }
