Apply suggestions from code review
Co-Authored-By: calebfletcher <caleb@fletcher.cf>

--- a/config.json.template
+++ b/config.json.template
@@ -12,8 +12,8 @@
     "CRYPTO_JSON_ALGORITHM": "aes256",
     "CRYPTO_JSON_ENCODING": "hex",
     "CRYPTO_JSON_MEMBER_ENCRYPT_KEY": "",
-    "SELF_JOIN_JOIN_COMMAND": "",
-    "SELF_JOIN_LEAVE_COMMAND": "",
+    "SELF_JOIN_JOIN_COMMAND": "!join",
+    "SELF_JOIN_LEAVE_COMMAND": "!leave",
     "SELF_JOIN_REQUIRE_VERIFIED": true,
     "SELF_JOIN_ROLE_NAMES": ""
 }
