--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wired-discord-bot",
+  "name": "rahu-discord-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@keyv/postgres": "^1.0.16",
-    "crypto-json": "^2.0.2",
-    "discord.js": "^11.4.2",
-    "keyv": "^3.1.0",
-    "webpack": "^4.29.6",
+    "discord.js": "^13.2.0",
+    "@discordjs/rest": "^0.1.0-canary.0",
+    "@discordjs/builders": "^0.6.0",
+    "discord-api-types": "^0.23.1",
+    "keyv": "^4.0.3",
+    "@keyv/sqlite": "^2.0.2",
+    "webpack": "^5.58.1",
     "xmlhttprequest": "^1.8.0"
   }
 }
